--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "chart.js": "^4.4.1",
+    "d3-geo": "^3.1.1",
     "framer-motion": "^12.23.24",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "react-simple-maps": "^3.0.0",
+    "react-tooltip": "^5.30.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.0",
